# 3D-Forest-Stand-Generator

./: .gitignore  README.md  forest_stand.csv  forest_stand.json  pyproject.toml
.github/workflows/: publish.yml
examples/: 01_tree.json  01_trees.json  10_trees.json  20_trees.json  demo_scene.py  forest_stand.json  help.py  trees.json  trees01.json  trees06.json  trees10.json  trees20.json
src/forest_stand_generator/: __init__.py  data_validation.py  export.py  stand.py  tree.py  visualization.py
src/forest_stand_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/forest_stand_generator_3D/: __init__.py  stand.py  visualization.py
src/forest_stand_generator_3D.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_stand.py  test_tree.py
